<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginPasswordSignInFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/sign_in_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:textAlignment="center"
        style="@style/Widget.MaterialComponents.Toolbar"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/BigText1.SignInToolbar"
            android:text="@string/sign_in"
            android:layout_gravity="center"/>
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_email_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        app:boxBackgroundColor="@null"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/sign_in_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@null"
        app:errorEnabled="true"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/sign_in_email_container">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sing_in_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/sign_btn_height"
        android:text="@string/sign_in"
        style="@style/SignInBtn"
        android:textAppearance="@style/MediumText"
        android:fontFamily="@font/google_sans_regular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintTop_toBottomOf="@id/sign_in_password_container"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>